src/test/deca/syntax/valid/homemade/test/test_pars_val_class_mult.deca
// Description:
//    Programme minimaliste testant l'arbre d'instruction pour une class multiples
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023

class iden {
    
}


class b{

}

class a extends b{
    
}