src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_class_2_iden_apres_extends.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les class
//
// Resultats:
//    Ligne 11 : Erreur (2 iden après extends)
//    
//
// Historique:
//    cree le 04/01/2023

class iden3{

}
class iden2{

}

class iden1 extends iden2 iden3{

}